# SmartContract

./: .gitignore  Anchor.toml  README.md
move/: Move.toml  suimove.md
move/sources/: amm_v2.move  coffee.move  counter.move  function.move  hello_world.move  if_else.move  primitive_data_types.move  todolist.move  uint.move  uniswap_v2_swap.move  voting.move
move/tests/: test_move.move  todolist.move  voting.move
programs/ammv2/: Cargo.toml
programs/ammv2/src/: draft.rs  lib.rs  state.rs
programs/ammv2/src/instructions/: init_pool.rs  liquidity.rs  mod.rs  swap.rs
programs/auction/: Cargo.toml
programs/auction/src/: lib.rs
programs/counter/src/: lib.rs
programs/hello_anchor/: Cargo.toml
programs/hello_anchor/src/: lib.rs
programs/marketplace/: Cargo.toml
programs/marketplace/src/: lib.rs
programs/my-project/src/: lib.rs
programs/study/: Cargo.toml
programs/study/src/: lib.rs
solana/: Anchor.toml
solana/programs/ammv2/: Cargo.toml
solana/programs/ammv2/src/: lib.rs
solana/programs/auction/src/: lib.rs
solana/programs/counter/src/: lib.rs
solana/programs/game_example/: Cargo.toml
solana/programs/game_example/src/: lib.rs
solana/tests/: game_example.ts
tests/: Cargo.toml  counter.ts
tests/src/: lib.rs  study.rs  test_initialize.rs
