[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]
anchor-client = "0.30.1"
my-project = { version = "0.1.0", path = "../programs/my-project" }
ammv2 = { version = "0.1.0", path = "../programs/ammv2" }
study = { version = "0.1.0", path = "../programs/study" }
